--- a/src/views/book.ejs
+++ b/src/views/book.ejs
@@ -101,10 +101,11 @@
                     
                     $(".comments-wrapper").append(
                         `<div class="user-rating">
-                            <h4>${newComment.author}</h4>
+                            <h4>From: ${newComment.author}</h4>
                             <p class="rating">Rating:</p>
                             <p>${newComment.comment}</p>
                             <p class="comment-time">${date}</p>
+                            <a>Answer</a>
                         </div>`
                     );
                     
@@ -113,9 +114,7 @@
                     let oldAvg = $(".avg-ratio").text();
 
                     let newAvg = (((oldAvg * amountOfRatings) + newComment.ratingValue) / (amountOfRatings + 1)).toFixed(2);
-                    $(".avg-ratio").html(
-                        newAvg.toString()
-                    );
+                    $(".avg-ratio").html(newAvg.toString());
 
                     // Clear inputs
                     for (let i = 0; i < ratingValue; i++) {
@@ -130,36 +129,24 @@
             return false;
         });
         </script>
-
+        
         <script>
-            let stars = document.querySelectorAll(".stars-wrapper .fa-star");
 
-            for (let i = 0; i < stars.length; i++) {
-                stars[i].addEventListener("click", () => {
-                    let ratingValue = stars[i].getAttribute("value");
-                    
-                    for (let i = 0; i < ratingValue; i++) {
-                        for (let i = 0; i < ratingValue; i++) {
-                            stars[i].classList.remove("active-rating");
-                        }
+            $(document).submit((e) => {
+                if (event.target.classList.contains("answer-form")) {
+                    e.preventDefault();
 
-                        // Fill the stars at click event
-                        stars[i].classList.remove("far");
-                        stars[i].classList.add("fas");
-
-                        for (let i = ratingValue; i < stars.length; i++) {
-                            // Reset stars from earlier clicks
-                            stars[i].classList.remove("fas");
-                            stars[i].classList.add("far");
-                        }
+                    let formData = {
+                        "author": $(".answer-input").val(),
+                        "content": $(".answer-box textarea").val()
                     }
 
-                    // Mark the star that was rated for getting the value later
-                    stars[i].classList.add("active-rating");
-                });
-            }
+                    // TODO: Answers of user ratings
+                }
+            })
         </script>
 
+        <script src="../assets/js/rating.js"></script>
         <script src="../assets/js/answerRating.js"></script>
     </body>
 </html>
