--- a/src/views/book.ejs
+++ b/src/views/book.ejs
@@ -148,5 +148,6 @@
 
         <script src="../assets/js/rating.js"></script>
         <script src="../assets/js/answerRating.js"></script>
+        <script src="../assets/js/mobileview.js"></script>
     </body>
 </html>
