--- a/src/views/books.ejs
+++ b/src/views/books.ejs
@@ -44,4 +44,5 @@
 
     <script src="./assets/js/fontawesome.min.js"></script>
     <script src="./assets/js/modal.js"></script>
+    <script src="../assets/js/mobileview.js"></script>
 </body>
