--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,4 +8,10 @@
             <li><a href="#">Navigation 3</a></li>
             <li><a href="#">Navigation 4</a></li>
         </ul>
+
+        <div class="mobile-nav">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
     </div>
