Footer + modal bugfix

--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -36,5 +36,7 @@
             </form>
         </div>
     </div>
+    
+    <%- include partials/footer.ejs %>
     <script src="../assets/js/mobileview.js"></script>
 </body>
