--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -44,5 +44,6 @@
         </div>
     </div>
 
+    <%- include partials/footer.ejs %>
     <script src="../assets/js/mobileview.js"></script>
 </body>
