--- a/src/views/book.ejs
+++ b/src/views/book.ejs
@@ -63,6 +63,8 @@
                 </form>
             </div>
         </div>
+        
+        <%- include partials/footer.ejs %>
 
         <!-- <script src="../assets/js/all.min.js"></script> -->
         <script
