--- a/src/views/books.ejs
+++ b/src/views/books.ejs
@@ -11,7 +11,14 @@
 
 <body>
     <%- include partials/header.ejs %>
-
+    <div class="modal">
+            <div class="modal-content">
+                <h4>Do you really want to delete this book?</h4>
+                <button class="main-btn delete-confirm">Yes</button>
+                <button class="main-btn delete-abort">No</button>
+            </div>
+    </div>
+    
     <div class="container">
         <h1 class="heading">Already published books:</h1>
 
@@ -32,16 +39,9 @@
                 </form>
             </div>
         <% }) %>
-
-        <div class="modal">
-            <div class="modal-content">
-                <h4>Do you really want to delete this book?</h4>
-                <button class="main-btn delete-confirm">Yes</button>
-                <button class="main-btn delete-abort">No</button>
-            </div>
-        </div>
     </div>
 
+    <%- include partials/footer.ejs %>
     <script src="./assets/js/fontawesome.min.js"></script>
     <script src="./assets/js/modal.js"></script>
     <script src="../assets/js/mobileview.js"></script>
